--- a/demo/app/src/main/AndroidManifest.xml
+++ b/demo/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.odembed">
 
@@ -7,23 +7,26 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
-    <application android:allowBackup="true"
-        android:label="@string/app_name"
+    <application
+        android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:theme="@style/MaterialTheme">
-        <activity android:name="com.example.odembed.DetectorActivity"
-                  android:label="@string/app_name_detector">
+        android:label="@string/app_name">
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.odembed.ClassifierActivity"
-                  android:label="@string/app_name_classifier">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        <activity android:name=".ClassifierActivity"
+            android:label="@string/app_name_classifier"
+            android:theme="@style/MaterialTheme">
+        </activity>
+        <activity android:name=".DetectorActivity"
+            android:label="@string/app_name_detector"
+            android:theme="@style/MaterialTheme">
         </activity>
     </application>
 
