--- a/demo/app/src/main/AndroidManifest.xml
+++ b/demo/app/src/main/AndroidManifest.xml
@@ -17,17 +17,21 @@
             android:theme="@style/Theme.AppCompat">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ClassifierActivity"
+        <activity
+            android:name=".ClassifierActivity"
             android:label="@string/app_name_classifier"
-            android:theme="@style/MaterialTheme">
-        </activity>
-        <activity android:name=".DetectorActivity"
+            android:theme="@style/MaterialTheme"></activity>
+        <activity
+            android:name=".DetectorActivity"
             android:label="@string/app_name_detector"
-            android:theme="@style/MaterialTheme">
-        </activity>
+            android:theme="@style/MaterialTheme"></activity>
+        <activity
+            android:name=".PhotoDetectorActivity"
+            android:label="@string/title_activity_photo_detector"></activity>
     </application>
 
 </manifest>
