--- a/demo/app/build.gradle
+++ b/demo/app/build.gradle
@@ -46,7 +46,9 @@ dependencies {
     compile 'com.android.support:support-annotations:26.1.0'
     compile 'com.android.support:support-v13:26.1.0'
 
-    compile 'org.tensorflow:tensorflow-lite:0.1.1' // TF Lite
+    //use customized tflite, instead of the one from jcenter, because android NN api
+    //is not exposed to java developer.
+    //compile 'org.tensorflow:tensorflow-lite:0.1.1' // TF Lite
     compile 'org.tensorflow:tensorflow-android:1.4.0' // TF Mobile
 
     testCompile 'junit:junit:4.12'
